fixed spacing and some small stuff

--- a/webpages/styles_homepage.css
+++ b/webpages/styles_homepage.css
@@ -216,7 +216,7 @@ ul li:hover ul.dropdown {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 20px;
+  margin: 20px auto;
   width: 100%;
   flex-direction: row-reverse;
   max-width: 1500px;
